# offline_muslim_prayer_time

./: 7.0.0  BUILD.md  CHANGELOG.md  Fixing_file.md  Prayer Times.spec  README.md  app.py  auto_fix_log.txt  auto_fixer.py  check_imports.py  claude_auto_reviewer.py  combine_to_txt.py  diagnose.py  diagnose_views.py  diagnostic_report.txt  fix_animations.py  fix_imports.py  fix_settings_location_picker.py  fixing.md  language_system.py  languages.json  main.old.py  main.py  muslim_pro_languages.py  prayer_times_app_fixed.py  project_structure.txt  pyproject.toml  quick_fix.py  requirements.txt  syntax_inspector.py  test_theme.py  theme_manager.py  zip_exporter.py
assets/: locations.json
components/: __init__.py  countdown_widget.py  navigation_components.py  navigation_rail.py  prayer_card.py  specialized_components.py  styled_components.py  ui_components.py
config/: build_config.yaml
data/: prayer_offline.db
i18n/: strings.json
scripts/: import_components_check.py  test_styled_components.py
services/: __init__.py  audio_player.py  location.py  notifier.py  praytimes.py  storage.py
tests/: __init__.py  test_jamaat.py  test_notifications.py  test_praytimes.py  test_storage.py
utils/: __init__.py  constants.py  helpers.py  validators.py
views/: __init__.py  base_view.py  dashboard_view.py  dashboard_view_glass.py  dua_view.py  qibla_view.py  settings_view.py  settings_view.py.backup  tasbih_view.py  tasbih_view.py.old
